# hugpi

./: .gitignore  README.md  install.sh  pyproject.toml  setup.py
src/hugpi/: __init__.py
src/hugpi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/hugpi/features/: __init__.py  chat.py  internet_explorer.py
src/hugpi/model/api/: __init__.py  _client.py  _models.py  _tool_calling.py
src/hugpi/model/api/resources/: chat.py  messages.py
src/hugpi/model/api/types/: _message.py  _model_types.py  tool_use_block.py
src/hugpi/model/base/: _base_huggy_chat.py  _base_llm.py  _hf_chatbot_custom.py
src/hugpi/model/server/: api.py  hugpi_api.py  simple_streamlit_app.py
tests/: exp.py  main.py
tests/cookies/: backupsanthosh1@gmail.com.json
