[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hugpi-features"
version= "0.1.0"
authors = [
  { name="Kammari santhosh", email="your.email@example.com" },
]
description = "Hugging Face chat based python library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain_core",
    "pydantic",
    "transformers",
    "hugchat"
]
[project.urls]
"Homepage" = "https://github.com/yourusername"
"Bug Tracker" = "https://github.com/yourusername"

[tool.setuptools.packages.find]
where = ["src"]