[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hugpi-features"
version= "0.2.5"
authors = [
  { name="Kammari santhosh", email="your.email@example.com" },
]
description = "Hugging Face chat based python library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "langchain_core",
    "pydantic",
    "transformers",
    "hugchat",
    "lxml_html_clean",
    "pyqt5",
    "pyopengenai",
    "phidata"
]
[project.urls]
"Homepage" = "https://github.com/yourusername"
"Bug Tracker" = "https://github.com/yourusername"

[tool.setuptools.packages.find]
where = ["src"]